--- a/styles/base.css
+++ b/styles/base.css
@@ -1,46 +1,44 @@
-/* @media (min-width: 768px) and (max-width: 1024px) {
+* {
+    box-sizing: border-box;
+    text-align: center;
+  }
+  body{
+    margin: auto; 
+  }
+  
+div{
+    border: 1px solid black;
+    box-sizing: border-box;
+    float: left;
+    text-align: center;
+}
+#i{
+    display: inline-block; 
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
     body{
-        width: 960%;
-        margin: auto;
+        width: 767px;
+        /* display: flex;
+        flex-direction: row;
+        flex-wrap: wrap; */
+        }
+}
+
+@media screen and (min-width:1025px){ 
+    body{
+        width:960px;
+        }
+        div{
+            float: left;
+        }
+}
+
+@media only screen and (max-width:767px){
+    body{        
+        width: 480px;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        }
-    /* div{
-        float: left;
-    } */
-
-  
-    #a{
-        width: 50%;
-        height: 100px;
-        line-height: 100px;
-    }
-    
-    #b{
-        width: 50%;
-        height: 100px;
-        line-height: 100px;
-    }
-    
-    #c, #d{
-        width: 50%;
-        height: 200px;
-        line-height: 200px;
-    }
-    
-    
-    #e, #f, #g, #h{
-        width: 25%;
-        height: 250px;
-        line-height: 250px;
-    }
-    
-    #i{
-        width: 100%;
-        height: 150px;
-        line-height: 150px;
-    }
+      }
 }
-   
- */
